added new MAIRDbContext

--- a/WMS_Lists/WMS_Lists/Components/Pages/FloatTableP1_Page.razor
+++ b/WMS_Lists/WMS_Lists/Components/Pages/FloatTableP1_Page.razor
@@ -6,7 +6,7 @@
  
 <PageTitle>FloatTable P1</PageTitle>
 
-<h1>FloatTable P1 WMS Values</h1>
+<h1>P1 WMS Values</h1>
 
 <MudDataGrid T="CombinedRecords" MultiSelection="false" Hover="true" Hideable="true" Items="@p1_wms" Filterable="true" QuickFilter="@_quickFilter">
     <ToolBarContent>
