--- a/WMS_Lists/WMS_Lists/Components/Layout/NavMenu.razor
+++ b/WMS_Lists/WMS_Lists/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="eventloggerwnl">
+            <NavLink class="nav-link" href="maircombo">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> MAIR Weight and Length
             </NavLink>
         </div>
