feat: added Tubing mill, p1, and tlc1/2 lists feat: added ability to search all lists by WO

--- a/WMS_Lists/WMS_Lists/Components/Layout/NavMenu.razor
+++ b/WMS_Lists/WMS_Lists/Components/Layout/NavMenu.razor
@@ -21,8 +21,26 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="floattable_p1">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> FloatTable P1
+            <NavLink class="nav-link" href="p1combo">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> P1 WMS
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="p1tlc1combo">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Threading - Casing 1
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="p1tlc2combo">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Threading - Casing 2
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tmillcombo">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tubing Mill
             </NavLink>
         </div>
     </nav>
