--- a/WMS_Lists/WMS_Lists/Components/Pages/Home.razor
+++ b/WMS_Lists/WMS_Lists/Components/Pages/Home.razor
@@ -8,9 +8,11 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, welcome to the WMS lists page!</h1>
 
-Welcome to your new app.
+<h2>To get started, select one of the lists on the menu to the left. </h2>
+
+<h3>DESCLAIMER: Some lists might take longer to populate, if you don't see the list after 2 minutes, please let IT know. Thank you</h3>
 
 @code{
     
