--- a/WMS_Lists/WMS_Lists/Components/Pages/MAIRCombo.razor
+++ b/WMS_Lists/WMS_Lists/Components/Pages/MAIRCombo.razor
@@ -23,7 +23,7 @@
         <PropertyColumn Property="x => x.Length" Format="##.####" />
         @* <PropertyColumn Property="x => x.TagIndex1"/> *@
         <PropertyColumn Property="x => x.Weight" Format="###" />
-        <PropertyColumn Property="x => x.DateAndTime" Title="DateTime" />
+        <PropertyColumn Property="x => x.DateAndTime" Title="Date and Time" />
         <PropertyColumn Property="x => x.Millitm" Title="Millitm" />
     </Columns>
 
