--- a/WMS_Lists/WMS_Lists/Components/Pages/P1Combo.razor
+++ b/WMS_Lists/WMS_Lists/Components/Pages/P1Combo.razor
@@ -21,6 +21,15 @@
             <PropertyColumn Property="x => x.WO"/>
             <PropertyColumn Property="x => x.Length" Format="##.####"/>
             <PropertyColumn Property="x => x.Weight" Title="Weight (Lbs)" Format="###.####" />
+            <TemplateColumn Title="Lbs/Foot" Filterable="true">
+                <CellTemplate>
+                    @{
+                        var x = context.Item;
+                        var calc_ftlbs = x.Weight / x.Length;
+                        <MudText>@calc_ftlbs</MudText>
+                    }
+                </CellTemplate>
+            </TemplateColumn>
             <PropertyColumn Property="x => x.DateAndTime" Title="Date and Time" />
         </Columns>
 
@@ -31,6 +40,7 @@
 }
 
 @code {
+    
     private List<Data.P1Combo>? p1_wms = null;
 
     private string _searchString = "";
