--- a/WMS_Lists/WMS_Lists/Components/Pages/TMill.razor
+++ b/WMS_Lists/WMS_Lists/Components/Pages/TMill.razor
@@ -31,7 +31,7 @@
                     @{
                         var x = context.Item;
                         var calc_ftlbs = x.Weight / x.Length;
-                        <MudText>@calc_ftlbs</MudText>
+                        <MudText>@calc_ftlbs?.ToString("00.0000")</MudText>
                     }
                 </CellTemplate>
             </TemplateColumn>
