--- a/WMS_Lists/WMS_Lists/Components/Pages/P1Combo.razor
+++ b/WMS_Lists/WMS_Lists/Components/Pages/P1Combo.razor
@@ -1,8 +1,14 @@
 ﻿@page "/p1combo"
+
 @using Microsoft.EntityFrameworkCore
+
 @attribute [StreamRendering]
+
 @rendermode InteractiveServer
+
 @inject Services.DataService DataService
+@inject IJSRuntime JSRuntime
+@inject ISnackbar Snackbar
  
 <PageTitle>P1 WMS</PageTitle>
 
@@ -10,26 +16,20 @@
 
 @if (p1_wms != null)
 {
-    <MudDataGrid T="Data.P1Combo" MultiSelection="false" Hover="true" Hideable="true" Items="@p1_wms" Filterable="true" QuickFilter="@_quickFilter">
+    <MudDataGrid T="Data.P1Combo" MultiSelection="false" Hover="true" Hideable="true" @ref="dataGrid" Items="@p1_wms" Filterable="true" QuickFilter="@_quickFilter">
         <ToolBarContent>
             <MudText Typo="Typo.h6">WMS P1 List</MudText>
             <MudSpacer />
             <MudTextField @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
             AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+            <MudSpacer />
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="ExportToCSV">Export to CSV</MudButton>
         </ToolBarContent>
         <Columns>
             <PropertyColumn Property="x => x.WO"/>
             <PropertyColumn Property="x => x.Length" Format="##.####"/>
             <PropertyColumn Property="x => x.Weight" Title="Weight (Lbs)" Format="###.####" />
-            <TemplateColumn Title="Lbs/Foot" Filterable="true">
-                <CellTemplate>
-                    @{
-                        var x = context.Item;
-                        var calc_ftlbs = x.Weight / x.Length;
-                        <MudText>@calc_ftlbs?.ToString("00.0000")</MudText>
-                    }
-                </CellTemplate>
-            </TemplateColumn>
+            <PropertyColumn Property="x => x.LbsFt" Title="Lbs/Ft" Format="##.####"/>
             <PropertyColumn Property="x => x.DateAndTime" Title="Date and Time" />
         </Columns>
 
@@ -38,12 +38,18 @@
         </PagerContent>
     </MudDataGrid>
 }
+else
+{
+    <MudProgressLinear Color="Color.Primary" Striped="true" Size="Size.Medium" Indeterminate="true" Class="my-7" />
+}
 
 @code {
     
     private List<Data.P1Combo>? p1_wms = null;
 
     private string _searchString = "";
+
+    private MudDataGrid<Data.P1Combo> dataGrid;
 
     private Func<Data.P1Combo, bool> _quickFilter => x =>
     {
@@ -75,5 +81,26 @@
             p1_wms = new List<Data.P1Combo>();
         }
 
+    }
+
+    private async Task ExportToCSV()
+    {
+        try
+        {
+            if (dataGrid != null)
+            {
+                await dataGrid.DownloadCsv(JSRuntime, "exported_P1_data.csv");
+                Snackbar.Add("CSV exported successfully", Severity.Success);
+            }
+            else
+            {
+                Snackbar.Add("DataGrid is not initialized", Severity.Error);
+            }
+        }
+        catch (Exception ex)
+        {
+            Snackbar.Add($"Error exporting CSV: {ex.Message}", Severity.Error);
+
+        }
     }
 }
