--- a/WMS_Lists/WMS_Lists/Components/Layout/NavMenu.razor
+++ b/WMS_Lists/WMS_Lists/Components/Layout/NavMenu.razor
@@ -43,6 +43,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tubing Mill
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="cmillcombo">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Casing Mill Final
+            </NavLink>
+        </div>
     </nav>
 </div>
 
