fix: skipping some irrelevant information to increase efficiency

--- a/WMS_Lists/WMS_Lists/Components/Pages/CMillCombo.razor
+++ b/WMS_Lists/WMS_Lists/Components/Pages/CMillCombo.razor
@@ -55,7 +55,7 @@ else
     {
         try
         {
-            cmill_wms = await DataService.GetAllWMSP1<Data.CMillCombo>();
+            cmill_wms = await DataService.SkipIrrelevantWMSP1<Data.CMillCombo>(1000000);
         }
         catch(Exception ex)
         {
