fix: typo fix "disclaimer"

--- a/WMS_Lists/WMS_Lists/Components/Pages/Home.razor
+++ b/WMS_Lists/WMS_Lists/Components/Pages/Home.razor
@@ -12,7 +12,7 @@
 
 <h2>To get started, select one of the lists on the menu to the left. </h2>
 
-<h3>DESCLAIMER: Some lists might take longer to populate, if you don't see the list after 2 minutes, please let IT know. Thank you</h3>
+<h3>DISCLAIMER: Some lists might take longer to populate, if you don't see the list after 2 minutes, please let IT know. Thank you</h3>
 
 @code{
     
